--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -26,7 +26,7 @@ copied = Copied.
 indev.notready = This part of the game isn't ready yet
 indev.campaign = [accent]Congratulations! You've reached the end of the campaign![]\n\nThis is as far as the content goes right now. Interplanetary travel will be added in future updates.
 
-load.sound = Sounds
+load.sound = Surutu
 load.map = Maps
 load.image = Images
 load.content = Content
@@ -1045,7 +1045,7 @@ launch.from = Launching From: [accent]{0}
 launch.destination = Destination: {0}
 configure.invalid = Amount must be a number between 0 and {0}.
 add = Add...
-boss.health = Guardian Health
+boss.health = Occupational health
 
 connectfail = [scarlet]Connection error:\n\n[accent]{0}
 error.unreachable = Server unreachable.\nIs the address spelled correctly?
@@ -1058,10 +1058,10 @@ error.io = Network I/O error.
 error.any = Unknown network error.
 error.bloom = Failed to initialize bloom.\nYour device may not support it.
 
-weather.rain.name = Rain
-weather.snow.name = Snow
-weather.sandstorm.name = Sandstorm
-weather.sporestorm.name = Sporestorm
+weather.rain.name = Rainfall Management
+weather.snow.name = Eyes
+weather.sandstorm.name = The wind
+weather.sporestorm.name = Ukun
 weather.fog.name = Fog
 
 sectors.unexplored = [lightgray]Unexplored
@@ -1214,7 +1214,7 @@ status.overclock.name = Hours
 status.shocked.name = I was surprised
 status.blasted.name = To detonate
 status.unmoving.name = It doesn't work
-status.boss.name = Guardian
+status.boss.name = bite
 
 sector.coastline.name = Shore
 sector.navalFortress.name = A sea fortress
